# foodgram-project

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: foodgram_workflow.yaml
api/: serializers.py  urls.py  views.py
flatpages/: urls.py  views.py
foodgram/: settings.py  urls.py
recipes/: admin.py  filters.py  forms.py  mixins.py  models.py  permissions.py  service.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_auto_20210313_1136.py  0002_auto_20210318_1135.py  0002_auto_20210319_1520.py  0002_auto_20210321_0120.py  0002_auto_20210321_0128.py  0002_auto_20210321_2253.py  0003_auto_20210315_1651.py  0003_auto_20210321_2307.py  0004_auto_20210316_1046.py  0005_auto_20210317_2046.py
recipes/templatetags/: user_filters.py
templates/: authorRecipe.html  base.html  customPage.html  favorite.html  index.html  indexAuth.html  indexNotAuth.html  myFollow.html  shopList.html  singlePage.html  singlePageNotAuth.html
templates/flatpages/: about.html
templates/forms/: formChangeRecipe.html  formRecipe.html
templates/include/: author_card.html  button_favorite.html  button_favorite_recipe.html  button_subscribe.html  nav.html  paginator.html  recipe_card.html  recipe_preview.html  tags.html
templates/misc/: 404.html  500.html
templates/recipes/: add_recipe.html  favorites.html  profile.html  recipe.html  recipe_confirm_delete.html
templates/registration/: login.html  (+7 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
(+9 files in other folders)
