[tool.poetry]
name = "foodgram-project"
version = "0.1.0"
description = ""
authors = ["Evan Vilagov <evan.vilagov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-filter = "^2.4.0"
djangorestframework = "^3.12.4"
gunicorn = "^20.1.0"
Pillow = "^8.2.0"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.17.0"
sorl-thumbnail = "^12.7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
